--- a/ui_tutorial/Base.lproj/Main.storyboard
+++ b/ui_tutorial/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -35,25 +36,54 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ceR-6Y-pgw">
+                                <rect key="frame" x="27" y="173" width="320" height="320"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" placeholderIntrinsicWidth="320" placeholderIntrinsicHeight="320" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="rb1-dd-QHu">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="320"/>
+                                        <gestureRecognizers/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="rb1-dd-QHu" secondAttribute="height" multiplier="1:1" id="H3Z-9p-UAV"/>
+                                        </constraints>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="C4P-OB-Tra" appends="YES" id="kap-G8-NkF"/>
+                                        </connections>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Hs-db-4Vn">
-                                <rect key="frame" x="14" y="103" width="151" height="30"/>
+                                <rect key="frame" x="16" y="123" width="151" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Set Default Text Label"/>
                                 <connections>
                                     <action selector="changeMealNameBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0Yk-sp-bfJ"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="SCu-L1-0OY" customClass="RatingControl" customModule="ui_tutorial" customModuleProvider="target">
+                                <rect key="frame" x="27" y="521" width="200" height="110"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
+                        <outlet property="imageView" destination="rb1-dd-QHu" id="Htr-mF-xKn"/>
                         <outlet property="mealNameLabel" destination="VUo-zp-eGU" id="gpr-Bi-5sC"/>
                         <outlet property="mealTextField" destination="wbq-br-5mk" id="eDV-eh-hKj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="C4P-OB-Tra">
+                    <connections>
+                        <action selector="imageSelect:" destination="BYZ-38-t0r" id="9it-I4-NMj"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="596" y="50.824587706146929"/>
+            <point key="canvasLocation" x="-609" y="-83"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="default" width="400" height="300"/>
+    </resources>
 </document>
